Aggiungo il dot toFood come ultima posizione nella lista e considero l'ultimo per impostare l'intensità.